syntax = "proto3";

// extract a class from the compiled result of protobuf
// and create a proper class
option java_multiple_files = true;

// Package for files location
package common;

// Define the package of the generated class
option java_package = "com.muazwzxv.models";

message EmailCredentials {
  string email = 1;
  string password = 2;
}

message PhoneOTP {
  int32 number = 1;
  int32 code = 2;
}

/**
  oneof - meaning that the type could be one or another but not
          both at the same instance
 */
message Credentials {
  oneof type {
    EmailCredentials emailType = 1;
    PhoneOTP otpType = 2;
  }
}